# olise-staging

./: .env.example  .gitignore  README.md  capacitor.config.ts  index.html  nginx.conf  package-lock.json  package.json  swa-cli.config.json  vite.config.ts
.github/workflows/: ci.yml  deploy-staging.yml  publish-desktop-manifest.yml  release-desktop.yml
android/app/: build.gradle
docs/: ARCHITECTURE.md  DESKTOP.md  INFRA.md  LOCAL_DEV.md  ROADMAP.md
public/: staticwebapp.config.json
public/desktop/: latest.json
scripts/: build-desktop-manifest.mjs  linear-backlog.json  linear-bootstrap.mjs  linear-phase2-brain.json  setup-ios.sh
src/: App.css  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  olise.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: App.tsx  AppRouter.tsx  AppRoutes.tsx
src/components/: ChatHome.css  ChatHome.tsx  ProgramRunner.css  ProgramRunner.tsx  ProgramsWelcome.css  ProgramsWelcome.tsx  RoutineRunner.css  RoutineRunner.tsx  RoutinesWelcome.css  RoutinesWelcome.tsx  ShellChrome.css  ShellChrome.tsx  Sidebar.css  Sidebar.tsx  SidebarResizeHandle.css  SidebarResizeHandle.tsx
src/context/: AuthContext.tsx
src/data/: programs.ts  routines.ts
src/design/: tokens.css
src/hooks/: DesktopUpdateProvider.tsx  desktopUpdateContext.ts  useAuth.ts  useChatSessions.ts  useDesktopUpdate.ts  useDesktopUpdate.tsx  useEscapeKey.ts  useMediaQuery.ts  useProgramProgress.ts  usePrograms.ts  useRoutineHistory.ts  useRoutines.ts  useSidebarWidth.ts
src/lib/: accessToken.ts  brain.ts  mfa.ts  (+14 more)
(+48 files in other folders)
